入力時設定の追加

--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -29,7 +29,7 @@
   "listPageTitle11": "- 歌人の間 -",
   "listPageTitle12": "- 王座の間 -",
   "getNewQuiz": "タップして問題を開放！",
-  "quizItemNoneText": "近日公開！お楽しみに",
+  "quizItemNoneText": "準備中！お楽しみに",
   "bottomQuiz": "問題",
   "bottomQuestioned": "質問済",
   "bottomAnswer": "解答",
